<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B3C7"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="20dp"
    tools:context=".PickPlayerMenu">

    <LinearLayout
        android:id="@+id/SelectedPlayerMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/GameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/WhoIsTheStartPlayer"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp" />

        <LinearLayout
            android:id="@+id/SelectedPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/firstPlayerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/PlayerSelectedButton"
                android:onClick="firstPlayerClick"
                android:text="@string/First_Player"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Space
                android:layout_width="32dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/SecondPlayerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/PlayerSelectedButton"
                android:onClick="secondPlayerClick"
                android:text="@string/Second_Player"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/SelectedPlayerCancel"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/RandomPlayerButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:background="@null"
                android:contentDescription="@string/PlayerSelectedButton"
                android:onClick="randomPlayerClick"
                android:scaleType="fitCenter"
                android:src="@drawable/random"
                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
